[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Common/Enemies/Lobber/Lobber.gd" type="Script" id=2]
[ext_resource path="res://Common/Enemies/Lobber/Projectiles/FireballLobV2.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
height = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 494.036

[node name="Lobber" type="KinematicBody2D"]
collision_layer = 512
collision_mask = 0
script = ExtResource( 2 )
projectile = ExtResource( 3 )

[node name="ThrowDelay" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.709804, 0, 1, 1 )
scale = Vector2( 0.34375, 0.4375 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AttackRange" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.152941 )
position = Vector2( 0, -4 )
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource( 2 )

[connection signal="timeout" from="ThrowDelay" to="." method="_on_ThrowDelay_timeout"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_AttackRange_body_exited"]
